# firmadigitale-client

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  fdotool.cpp  fdotool.hpp  resources.qrc  version.hpp
src/settings/: defaults.hpp  fdosettings.cpp  fdosettings.hpp  manager.cpp  utility.cpp  utility.hpp
src/signer/: CMakeLists.txt  certificate.cpp  certificate.hpp  digisigner.cpp  digisigner.hpp
src/window/: CMakeLists.txt  configdialog.cpp  configdialog.hpp  configdialog.ui  mainwindow.cpp  mainwindow.hpp  processwindow.cpp  processwindow.hpp
src/worker/: odooworker.cpp  odooworker.hpp
tools/: CMakeLists.txt  openssl-1.0.2n-cades.patch
